# netcity-live-traffic-visualizer

./: .gitignore  README.md  docker-compose.yml  netcity-coding-agent-prompt.md
backend/: Dockerfile  pyproject.toml
backend/app/: __init__.py  data_paths.py  main.py  runtime.py  security.py
backend/app/analysis/: __init__.py  aggregator.py  blocklist.py  trust_scorer.py
backend/app/api/: routes.py
backend/app/capture/: __init__.py  base.py  live.py  mock_replay.py  orchestrator.py
backend/app/model/: __init__.py  domain.py  messages.py
backend/app/stream/: __init__.py  ws.py
backend/data/: blocklist_hosts.txt  sample_capture.json
backend/scripts/: check_capture_env.py  sanitize_capture.py
backend/tests/: test_aggregator.py  test_messages.py  test_security.py  test_trust_scorer.py
docs/: architecture.md
frontend/: eslint.config.js  index.html  package.json  pnpm-lock.yaml  tailwind.config.ts  tsconfig.node.json
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/net/: client.ts  decode.test.ts  decode.ts
frontend/src/render/: buildings.ts  cars.ts  geo.ts  roads.ts  scene.ts
frontend/src/store/: cityStore.test.ts  cityStore.ts
frontend/src/types/: domain.ts  messages.ts
frontend/src/ui/: DetailPanel.tsx  Hud.tsx  Legend.tsx  SourceBanner.tsx
