[project]
name = "netcity-backend"
version = "0.1.0"
description = "Local NetCity backend"
requires-python = ">=3.11"
dependencies = [
  "fastapi[standard]>=0.115.0",
  "pydantic>=2.8.0",
  "scapy>=2.6.0",
]

[dependency-groups]
dev = [
  "pytest>=8.3.0",
  "pytest-asyncio>=0.24.0",
  "ruff>=0.8.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["."]
